# soil_diskin

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md  Snakefile  age_distribution_util_funcs.py  config.yaml  environment.yml  look_at_s_tau.ipynb  process_he_2016.py  pyproject.toml  pytest.ini
Mathematica/: extended_power_law.nb  lognormal_model.nb
data/: 14C_atm.csv  14C_atm_annot.csv  test_lognormal_fit_pred.nb
notebooks/: 01_preprocess_14C_history.py  01_preprocess_baledant_data.py  01_preprocess_balesdent_data.py  01_preprocess_balesdent_data_all.py  02_get_turnover_14C.py  02_get_turnover_14C_all.py  03a_calibrate_powelaw_model.py  03a_calibrate_powerlaw_model.py  03a_calibrate_powerlaw_model_all.py  03b_calibrate_lognormal_model.nb  03b_calibrate_lognormal_model.py  03b_calibrate_lognormal_model.wls  03b_calibrate_lognormal_model_fit.nb  03b_calibrate_lognornal_model.nb  03b_calibrate_lognornal_model_fit.nb  03b_calibrate_lognornal_model_old.nb  03b_compare_calcurves.py  03b_lognormal_age_scan.wls  03b_lognormal_calibration.py  03b_scan2csv.py  03c_calibrate_generalized_powerlaw_model.py  03c_calibrate_generalized_powerlaw_model_hierarchical.py  03c_calibrate_generalized_powerlaw_model_pymc.py  03c_calibrate_generalized_powerlaw_model_test_different_beta.py  03d_calibrate_gamma_model.py  03d_calibrate_weibull_model.py  04_CABLE_model_predictions.py  04_CLM45_model_predictions.py  04_JSBACH_model_predictions.py  04_RC_model_predictions.py  04_collect_continuum_model_predictions.py  04_collect_generalized_powerlaw_predictions_tmin.py  (+61 more)
(+197 files in other folders)
