[project]
name = "soil-diskin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
pythonpath = ["."]
dependencies = [
    "cartopy>=0.24.1",
    "dask>=2025.5.1",
    "geemap>=0.35.3",
    "h5netcdf>=1.6.1",
    "jax>=0.6.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "nose2>=0.15.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.4.1",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "split>=0.4",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
